# adk-jsm-agent-main

./: .env.example  .gitignore  .pre-commit-config.yaml  GEMINI.md  Makefile  README.md  pyproject.toml
adk_jsm_agent/agent/: __init__.py  agent.py  auth.py  jira_issues.py
adk_jsm_agent/tools/: agentengine_manage.py  agentspace_manage.py
tests/: __init__.py  test_jira_issues.py
